fix 1px header overlap

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@
 body {
     font-family: 'adobe-clean', 'Trebuchet MS', sans-serif;
     margin: 0;
-    padding-top: 64px;
+    padding-top: 65px;
     font-size: var(--type-body-m-size);
     line-height: var(--type-body-m-lh);
 }
